--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "encore/laravel-admin": "^1.6",
         "fideloper/proxy": "^4.0",
         "germey/geetest": "^3.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
         "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
